[FIX] Heading line-height improvements, esp. to prevent text overlap on headings that wrap.

--- a/mods/trunk/themes/greenblog_tiki_6/styles/greenblog.css
+++ b/mods/trunk/themes/greenblog_tiki_6/styles/greenblog.css
@@ -102,6 +102,10 @@ text-decoration: underline}
 .wikitext a.wiki:visited {
 	color: #ffc64a !important;
 	text-decoration: none}
+	
+h1, h2, h3, h4, h5 {
+	line-height: 1.1;
+}
 
 h1 {
 	margin: 0px;
