--- a/mods/trunk/themes/milkyway_tiki_6/styles/milkyway.css
+++ b/mods/trunk/themes/milkyway_tiki_6/styles/milkyway.css
@@ -102,6 +102,10 @@ a:hover {
 	text-decoration: underline !important;
 	font-weight: normal !important;
 	color: #0b3768 !important}
+	
+h1, h2, h3, h4, h5 {
+	line-height: 1.1;
+}
 
 h1 {
 	padding: 0;
