--- a/mods/trunk/themes/mollio_tiki_6/styles/mollio.css
+++ b/mods/trunk/themes/mollio_tiki_6/styles/mollio.css
@@ -161,6 +161,7 @@ h6 {
 	color: #000;
 	border-bottom: 1px solid #eee;
 	padding-bottom: .1em;
+	line-height: 1.1;
 }
 
 h1 {
