--- a/mods/trunk/themes/smooth_tiki_6/styles/smooth.css
+++ b/mods/trunk/themes/smooth_tiki_6/styles/smooth.css
@@ -118,6 +118,10 @@ a:hover {
 	text-decoration: none !important;
 }
 
+h1, h2, h3, h4, h5 {
+	line-height: 1.1;
+}
+
 h2, h3, h4, h5 {
 	padding-left: .6em;
 	padding-right: .6em;
@@ -129,7 +133,7 @@ h1 {
 	color: #fff;
 	font-size: 1em;
 	text-transform: uppercase;
-	height: 28px;
+	min-height: 28px;
 	margin-top: 0;
 	padding: 12px 0 0 20px;
 	position: relative;
